--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
     <script type="module" src="/src/main.tsx" defer></script>
     <title>The Code Nook</title>
   </head>
