--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
+    <link rel="icon" href="/src/assets/icon.png">
     <script type="module" src="/src/main.tsx" defer></script>
     <title>The Code Nook</title>
   </head>
